fix(ticket): make header overlap scrollable content  (#4585)
* fix: adjust arrow style for the mouse hover

* fix: add TopItemList to specify wrapper of top items

--- a/src/pages/tickets/detail/components/Event.less
+++ b/src/pages/tickets/detail/components/Event.less
@@ -110,6 +110,12 @@
                 margin-left: 3px;
                 margin-right: 3px;
             }
+
+            .arrow {
+                height: 24px;
+                padding: @layout-spacing-xxs;
+                margin: 0 @layout-spacing-xxs;
+            }
         }
     }
 
